# nks_slackbob

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  ruff.toml
.github/workflows/: build_deploy.yml  ci.yml
.nais/: app.yaml
src/nks_slackbob/: __init__.py  auth.py  blocks.py  expressions.py  logging.py  main.py  settings.py  utils.py
tests/: test_utils.py
