[project]
name = "nks-slackbob"
version = "0.1.0"
description = "Slackbot for NKS Kunnskapsbase Basert Språkmodell"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "slack-bolt>=1.20.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
]

[project.scripts]
nks-slackbob = "nks_slackbob.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
]
